refactor: Menu setter 제거 및 단위테스트 작성